# markov-text-generator

./: README.md  meson.build
books/: defiant agents - andre norton.txt
source/: main.c  markov.c  markov.h
